force-app/main/default/objects/CTRNewsItem__c.object
<CustomObject>
    <fields>
        <fullName>CTRNewsHeader__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CTRNewsHeader</label>
        <referenceTo>CTRNewsHeader__c</referenceTo>
        <relationshipLabel>CTRNewsItem</relationshipLabel>
        <relationshipName>CTRNewsItem</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CTRNews__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CTR News</label>
        <referenceTo>CTRNews__c</referenceTo>
        <relationshipName>Transection_CTRNewsItem</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CTRRequestFormItem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CTR Request Form Item</label>
        <referenceTo>CTRRequestFormItem__c</referenceTo>
        <relationshipName>Transection_CTRNewsItem</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Flag</label>
        <type>Checkbox</type>
    </fields>
    <label>CTRNewsItem</label>
    <listViews>
        <fullName>All</fullName>
        <columns>CTRNews__c</columns>
        <columns>CTRNewsHeader__c</columns>
        <columns>CTRRequestFormItem__c</columns>
        <columns>NAME</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Flag__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Transection CTR News Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>